Update Supabase client instantiation method
Refactor Supabase client initialization to avoid global conflicts.

--- a/index.html
+++ b/index.html
@@ -478,9 +478,18 @@
 </a>
 
 <script>
+// Usamos un nombre diferente para la instancia (supabaseClient) 
+// para evitar conflictos con el objeto global 'window.supabase' de la librería.
 const SUPABASE_URL = "https://ejbqlejlgprvwzrptojo.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVqYnFsZWpsZ3Bydnd6cnB0b2pvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTcwMjkwMjIsImV4cCI6MjA3MjYwNTAyMn0.9fVItJka0MN3nlfowVudIE0AuNmfTJGQcbbqpau2Th8";
-const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+// Opción ultra-segura: solo declarar si no existe
+if (typeof supabaseClient === 'undefined') {
+    window.supabaseClient = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+}
+
+// Para que el resto de tu código siga funcionando sin cambiar nada:
+var supabase = window.supabaseClient;
 
 let carritoCliente = [];
 let todasLasPromos = [];
