--- a/index.html
+++ b/index.html
@@ -483,15 +483,16 @@
 const SUPABASE_URL = "https://ejbqlejlgprvwzrptojo.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVqYnFsZWpsZ3Bydnd6cnB0b2pvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTcwMjkwMjIsImV4cCI6MjA3MjYwNTAyMn0.9fVItJka0MN3nlfowVudIE0AuNmfTJGQcbbqpau2Th8";
 
-// 2. Inicializamos el cliente con un nombre DISTINTO (ej: 'sun_db') para evitar errores
-// No usamos 'const supabase' porque la librería ya usa ese nombre.
-const sun_db = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+// 2. Inicialización del cliente con un nombre único para evitar conflictos
+const supabaseClient = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-// 3. Variables de estado
+// 3. Variables de estado de la aplicación
 let carritoCliente = [];
 let todasLasPromos = [];
 let pedidoTemp = [];
 let pedidoExistenteId = null;
+
+
 
 // ================== CARGA CATEGORÍAS ==================
 async function cargarCategorias() {
@@ -675,7 +676,7 @@ document.getElementById("busquedaPromo").addEventListener("input", async (e) => 
     return;
   }
 
-  let query = sun_db.from("promociones").select("*");
+  let query = supabase.from("promociones").select("*");
   if (catId) query = query.eq("categoria_id", catId);
   if (texto.length > 0) query = query.ilike("nombre", `%${texto}%`);
 
@@ -892,7 +893,8 @@ async function consultarPedidosCliente() {
 
   try {
     // 💡 MODIFICACIÓN 1: Incluir 'estado' en la selección
-    const { data: pedidos, error } = await sun_db.from("pedidos")
+    const { data: pedidos, error } = await supabase
+      .from("pedidos")
       .select("id, created_at, total, productos, cliente, estado") 
       .ilike("dni", `%${dni}%`)
       .order("created_at", { ascending: false });
@@ -1000,8 +1002,7 @@ async function confirmarPedido() {
     // 1. Guardar o actualizar el pedido en la tabla 'pedidos'
     let pedidoId;
     if (pedidoExistenteId) {
-      const { error } = await supabase
-        .from("pedidos")
+      const { error } = await sun_db.from("pedidos")
         .update({ dni: dni, total: totalCalculado, productos: pedidoTemp })
         .eq("id", pedidoExistenteId);
       if (error) throw error;
